--- a/src/app/usuario/usuario.page.html
+++ b/src/app/usuario/usuario.page.html
@@ -26,7 +26,8 @@
           <ion-item>
             <ion-col>
               <ion-row class="ion-justify-content-center">
-                <app-usuario-img [src]="usuario.img_url"></app-usuario-img>
+                <!-- <app-usuario-img [src]="usuario.img_url"></app-usuario-img> -->
+                <app-usuario-img src="fafafa"></app-usuario-img>
                 <!-- <ion-avatar> -->
                   <!-- <ion-img
                     src="{{usuario.img_url}}"
@@ -43,11 +44,11 @@
               </ion-row>
               <ion-col class="ion-justify-content-center">
                 <ion-card-title class="ion-text-center"
-                  >{{usuario.username}}</ion-card-title
+                  >{{user.username}}</ion-card-title
                 >
-                <ion-card-subtitle class="ion-text-center"
+                <!-- <ion-card-subtitle class="ion-text-center"
                   >{{usuario.email}}</ion-card-subtitle
-                >
+                > -->
               </ion-col>
             </ion-col>
           </ion-item>
@@ -57,7 +58,8 @@
           <ion-header>
             <ion-toolbar>
               <ion-list>
-                <ion-item lines="none" [routerLink]="['/usuarios', 'editar', usuario.id]">
+                <!-- <ion-item lines="none" [routerLink]="['/usuarios', 'editar', userId]"> -->
+                <ion-item lines="none" [routerLink]="['/usuarios', 'editar', user.id]">
                 <!-- <ion-item [routerLink]="['/perfil', 'editar']"> -->
                   <ion-icon
                     slot="start"
@@ -100,7 +102,7 @@
           <ion-footer>
             <ion-toolbar>
               <ion-list>
-                <ion-item lines="none" (click)="logout()">
+                <ion-item lines="none" (click)="logout()" button="true">
                   <ion-icon
                     slot="start"
                     ios="log-out-outline"
