--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -19,11 +19,12 @@
   <ion-grid>
     <ion-row class="ion-justify-content-center">
       <ion-col size="2" class="ion-hide-md-down">
-     <app-usuario-img [src]="usuario.img_url"></app-usuario-img>       
+     <app-usuario-img [src]="fafafa"></app-usuario-img>       
+     <!-- <app-usuario-img [src]="usuario.img_url"></app-usuario-img>        -->
       </ion-col>
       <ion-col size-sm="12" size-md="9" size-lg="7">
         <ion-row>
-          <form #f="ngForm" (ngSubmit)="postUsuario()">
+          <form #f="ngForm" (ngSubmit)="postUsuario(f)">
             <!-- <ion-row class="ion-justify-content-center">
                 <app-usuario-img [src]="usuario.img_url"></app-usuario-img>
               </ion-row> -->
@@ -36,7 +37,7 @@
                 <ion-label position="floating">Nombre</ion-label>
                 <ion-input
                   name="name"
-                  [ngModel]="usuario.name"
+                  [(ngModel)]="profile.name"
                   required
                 ></ion-input>
               </ion-item>
@@ -46,38 +47,35 @@
                 <ion-label position="floating">Apellido</ion-label>
                 <ion-input
                   name="last_name"
-                  [ngModel]="usuario.last_name"
+                  [(ngModel)]="profile.last_name"
                   required
                 ></ion-input>
               </ion-item>
 
               <!-- </ion-col> -->
               <!-- <ion-col size-md="3" size="12"> -->
-              <ion-item class="expand-full">
+              <!-- <ion-item class="expand-full">
                 <ion-label position="floating">DNI</ion-label>
                 <ion-input
                   name="dni"
-                  [ngModel]="usuario.dni"
+                  [(ngModel)]="profile.dni"
                   required
                 ></ion-input>
-              </ion-item>
+              </ion-item> -->
 
               <!-- </ion-col> -->
               <!-- <ion-col size-md="3" size="12"> -->
               <ion-item class="expand-full">
-                <ion-label
-                  [position]="(usuario.fotoclub_id != undefined) ? 'stacked' : 'floating'"
-                  >Fotoclub</ion-label
-                >
-                <ion-select
-                  #sFotoclub
-                  name="fotoclub_id"
-                  [value]="usuario.fotoclub_id"
+                <ion-label [position]="(profile.fotoclub_id != undefined) ? 'stacked' : 'floating'">Fotoclub</ion-label>
+                <ion-select #sFotoclub
+                  name="fotoclub_id" 
+                  [(ngModel)]="profile.fotoclub_id"
                   required
                 >
-                  <ion-select-option *ngFor="let f of fotoclubes" [value]="f.id"
-                    >{{f.name}}</ion-select-option
-                  >
+                  <ion-select-option 
+                    *ngFor="let f of fotoclubes" 
+                    [value]="f.id"
+                  >{{f.name}}</ion-select-option>
                 </ion-select>
               </ion-item>
 
@@ -92,13 +90,13 @@
                 <ion-label position="floating">Username</ion-label>
                 <ion-input
                   name="username"
-                  [ngModel]="usuario.username"
+                  [(ngModel)]="usuario.username"
                   required
                 ></ion-input>
               </ion-item>
               <!-- </ion-col> -->
               <!-- <ion-col size-md="4" size="12"> -->
-              <ion-item class="expand-full">
+              <!-- <ion-item class="expand-full">
                 <ion-label position="floating">Email</ion-label>
                 <ion-input
                   name="email"
@@ -106,29 +104,30 @@
                   [ngModel]="usuario.email"
                   required
                 ></ion-input>
-              </ion-item>
+              </ion-item> -->
               <!-- </ion-col> -->
               <!-- <ion-col size-md="5" size="12"> -->
 
               <ion-item class="expand-full">
                 <!-- <ion-label [position]="(usuario.rol_id != undefined) ? 'stacked' : 'floating'">Rol</ion-label> -->
-                <ion-label [position]="'floating'">Rol</ion-label>
-                <ion-select
-                  #sRol
-                  name="rol_id"
-                  [value]="(usuario.rol_id == undefined) ? 2 : usuario.rol_id"
+                <ion-label [position]="'stacked'">Rol</ion-label>
+                <!-- [value]="(usuario.role_id == undefined) ? 2 : usuario.role_id" -->
+                <!-- (value)="usuario.role_id" -->
+                <ion-select #sRol
+                  name="role_id"
+                  [(ngModel)]="usuario.role_id"
                   interface="popover"
-                  [disabled]="!userIsAdmin()"
+                  [disabled]="!isAdmin"
                   required
-                >
-                  <ion-select-option *ngFor="let r of roles" [value]="r.id"
-                    >{{r.type}}</ion-select-option
                   >
+                    <ion-select-option 
+                      *ngFor="let r of roles" 
+                      [value]="r.id"
+                    >{{r.type}}</ion-select-option>
                 </ion-select>
               </ion-item>
               <!-- </ion-col> -->
-              <ion-item class="expand-full">
-                <!-- <ion-row> -->
+              <!-- <ion-item class="expand-full">
                   <ion-col size="10" size-md="12" >
                     <ion-item class="ion-no-padding">
                       <ion-label position="floating">Imagen (url)</ion-label>
@@ -149,8 +148,7 @@
                   </ion-item>
                  
                 </ion-col>
-                <!-- </ion-row> -->
-              </ion-item>
+              </ion-item> -->
             </ion-row>
 
             <ion-row class="ion-justify-content-end">
@@ -162,10 +160,13 @@
                     size-sm="3"
                     class="ion-align-self-center"
                     ><ion-button
-                      expand="block"
                       type="submit"
-                      [disabled]="!datosCargados()"
-                      >Guardar</ion-button
+                      [disabled]="!f.valid"
+                    >
+                    <!-- expand="block" -->
+                        <ion-spinner *ngIf="posting" class="ion-margin-end" size="small"></ion-spinner>
+                        Guardar
+                      </ion-button
                     ></ion-col
                   >
 
